--- a/menu/static/styles.css
+++ b/menu/static/styles.css
@@ -136,7 +136,9 @@ header {
 
 .product-btn img {
     max-width: 100%;
-    height: auto;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 3px;
 }
 
 .product-name, .product-price {
@@ -265,4 +267,40 @@ header {
     .title {
         font-size: 20px;
     }
+}
+/* 모달 창 스타일 */
+.modal {
+    display: none; /* 초기에는 숨겨둡니다. */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 400px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
